fix overflowing links on video expanding preview on phones

--- a/src/_sass/sections/talks-expanded-preview.scss
+++ b/src/_sass/sections/talks-expanded-preview.scss
@@ -49,6 +49,11 @@
     flex: 1 0 100%;
     padding: 0 6rem;
     box-sizing: border-box;
+    width: 100%;
+
+    a {
+      word-wrap: break-word;
+    }
 
     @include respond(tab-small) {
       flex: 1 0 100%;
